@@ -4,7 +4,7 @@
 import KMLImpl from 'impl/layer/KML';
 import LayerVector from './Vector';
 import {
-  isUndefined, isNullOrEmpty, isString, normalize, isObject,
+  isUndefined, isNullOrEmpty, isObject,
 } from '../util/Utils';
 import Exception from '../exception/exception';
 import * as LayerType from './Type';
@@ -123,12 +123,6 @@ class KML extends LayerVector {
     super(parameters, options, undefined, impl);
 
     /**
-     * KML extract: Activa la consulta al hacer clic sobre un objeto geográfico,
-     * por defecto verdadero.
-     */
-    this.extract = parameters.extract === undefined ? true : parameters.extract;
-
-    /**
      * KML options: Optiones que se mandan a la implementación.
      */
     this.options = options;
@@ -164,42 +158,6 @@ class KML extends LayerVector {
      * @type {Array<String>}
      */
     this.removeFolderChildren = optionsVar.removeFolderChildren;
-  }
-
-  /**
-   * Devuelve el valor de la propiedad "extract". La propiedad "extract" tiene la
-   * siguiente función: Activa la consulta al hacer clic en la característica,
-   * por defecto verdadero.
-   *
-   * @function
-   * @getter
-   * @returns {IDEE.LayerType.KML} Valor de la propiedad "extract".
-   * @api
-   */
-  get extract() {
-    return this.getImpl().extract;
-  }
-
-  /**
-   * Sobrescribe el valor de la propiedad "extract". La propiedad "extract" tiene la
-   * siguiente función: Activa la consulta al hacer clic en la característica,
-   * por defecto verdadero.
-   *
-   * @function
-   * @setter
-   * @param {Boolean} newExtract Nuevo valor para sobreescribir la propiedad "extract".
-   * @api
-   */
-  set extract(newExtract) {
-    if (!isNullOrEmpty(newExtract)) {
-      if (isString(newExtract)) {
-        this.getImpl().extract = (normalize(newExtract) === 'true');
-      } else {
-        this.getImpl().extract = newExtract;
-      }
-    } else {
-      this.getImpl().extract = true;
-    }
   }
 
   /**
